<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_margin="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/password_or_len" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordOrLen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:text="@string/password_or_len_helper_text" />

            <CheckBox
                android:id="@+id/wipeEmbeddedSim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layoutDirection="rtl"
                android:text="@string/wipe_embedded_sim_checkbox"
                android:textAppearance="?attr/textAppearanceBodyLarge" />

            <RadioGroup
                android:id="@+id/keyguardType"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    android:layout_marginEnd="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keyguard_type" />

                <RadioButton
                    android:id="@+id/keyguardTypeA"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keyguard_type_a" />

                <RadioButton
                    android:id="@+id/keyguardTypeB"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keyguard_type_b" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:text="@string/keyguard_type_description" />

        </LinearLayout>

    </ScrollView>

    <ToggleButton
        android:id="@+id/toggle"
        android:layout_margin="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        android:theme="@style/Theme.Duress.ToggleButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>